--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/check": "0.8.2",
+    "@astrojs/cloudflare": "^11.0.1",
     "@astrojs/react": "3.6.0",
     "@astrojs/tailwind": "5.1.0",
     "@radix-ui/react-dialog": "1.1.1",
